# my-py5-project

./: README.md  main.py  pyproject.toml  sketch.py
.zed/: settings.json  tasks.json
lessons/: 01-drawing-vocabulary.py  02-loops.py  03.1-functions-modularity.py  03.2-functions-animation.py  03.3-functions-polygons.py  heart.py
