[project]
name = "my-py5-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jpype1>=1.6.0",
    "py5[extras,py5-run,run]>=0.10.9a1",
]

[dependency-groups]
dev = [
    "watchfiles>=1.1.1",
]

[tool.ruff.lint]
# F821 is the code for "Undefined name"
# Disable linting flags as runtime via py5-run-sketch injects the missing global names
ignore = ["F821"]
